<resources>
    <string name="app_name">TaskManager</string>
    <string name="hint_login">Enter login</string>
    <string name="hint_password">Enter password</string>
    <string name="text_login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accountType">com.alivshin.taskmanager</string>
    <string name="error.login.empty">User name should not be empty</string>
    <string name="error.password.empty">Password should not be empty</string>
    <string name="drawer.task.list.pool">Pool tasks</string>
    <string name="drawer.task.list.user">My tasks</string>
    <string name="drawer.pool.list">Pool</string>
    <string name="drawer.logout">Logout</string>
    <string name="authTokenType">taskmanager.authTokenType</string>
    <string name="navigation_drawer.open">Open</string>
    <string name="navigation_drawer.close">Close</string>
    <string name="error.message.default">Unknown error occured</string>
    <string name="header.tasks.assigned">Assigned</string>
    <string name="header.tasks.unassigned">Unassigned</string>
    <string name="deadline_format">dd/MM/yyyy HH:mm</string>
    <string name="hello_test">Hello Test!</string>
    <string name="click_me">Click me!</string>
</resources>
